# BPF-perftool

./: .gitignore  .gitmodules  OWNERS  README.md  measures.txt
scap-open/: README.md
src/: .gitignore  CMakeLists.txt  Makefile  stats.bpf.c  stats.c  stats.h  stats.yaml
src/bpf/: stats.bpf.c
src/cmake/modules/: jsoncpp.cmake  libaudit.cmake  libbpf.cmake  yaml-cpp.cmake  zlib.cmake
src/userspace/: main.cpp  manage_scap_open.cpp  redis_mode.cpp  single_syscall_mode.cpp  stats_collector.cpp  stats_collector.h  syscall_generator.cpp
stress-tester/: README.md  syscall_generator.c
templates/: .gitignore  Makefile  stats  stats.bpf.c  stats.c  stats.h
utils/: go.mod  go.sum  main.go
